chaim-bprint-spec/tests/fixtures/valid/user-with-constraints.bprint
{
  "schemaVersion": "1.0",
  "entityName": "User",
  "description": "User entity with field constraints",
  "identity": { "fields": ["userId"] },
  "fields": [
    {
      "name": "userId",
      "type": "string",
      "required": true,
      "constraints": {
        "minLength": 1,
        "maxLength": 64
      }
    },
    {
      "name": "email",
      "type": "string",
      "required": true,
      "constraints": {
        "minLength": 5,
        "maxLength": 254,
        "pattern": "^[^@]+@[^@]+\\.[^@]+$"
      }
    },
    {
      "name": "stateCode",
      "type": "string",
      "required": false,
      "constraints": {
        "minLength": 2,
        "maxLength": 2,
        "pattern": "^[A-Z]{2}$"
      }
    },
    {
      "name": "zipCode",
      "type": "string",
      "required": false,
      "constraints": {
        "minLength": 5,
        "maxLength": 10,
        "pattern": "^[0-9]{5}(-[0-9]{4})?$"
      }
    },
    {
      "name": "age",
      "type": "number",
      "required": false,
      "constraints": {
        "min": 0,
        "max": 150
      }
    },
    {
      "name": "accountBalance",
      "type": "number",
      "required": false,
      "constraints": {
        "min": 0,
        "max": 999999999.99
      }
    },
    {
      "name": "ssn",
      "type": "string",
      "required": false,
      "constraints": {
        "minLength": 9,
        "maxLength": 11,
        "pattern": "^[0-9]{3}-?[0-9]{2}-?[0-9]{4}$"
      }
    },
    {
      "name": "isActive",
      "type": "boolean",
      "required": true,
      "default": true
    },
    {
      "name": "createdAt",
      "type": "timestamp",
      "required": true
    }
  ]
}
