chaim-bprint-spec/tests/fixtures/invalid/invalid-number-constraint-on-string.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Invalid",
  "description": "Invalid: min constraint on string field",
  "identity": { "fields": ["id"] },
  "fields": [
    {
      "name": "id",
      "type": "string",
      "required": true
    },
    {
      "name": "name",
      "type": "string",
      "required": true,
      "constraints": {
        "min": 0,
        "max": 100
      }
    }
  ]
}
